# yupi

./: .env.example  .gitignore  API.md  LICENSE  README.md  alembic.ini  api.md  openapi.json:Zone.Identifier  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c6a02896faa_add_used_reset_tokens_table.py  1494e1cfce48_add_vector_index.py  251a68462530_add_file_uploads_table_and_transaction_.py  3e03d8a7da83_add_embedding_column.py  3f110f0242f1_audit_fixes_add_indexes_nullable_.py  3f49ac202510_add_pgvector_extension_and_update_.py  5fcd8645b9e8_change_transaction_date_type_to_datetime.py  8bc63af6c535_init.py  8d4f7c3a33ba_standardize_model_fields_and_.py  976d6d36ffb1_change_limit_in_account_model_to_.py  a1b2c3d4e5f6_add_chat_tables.py  a93ff4be88a7_add_content_blocks_to_chat_messages.py  c6dcdf298067_create_account_category_transactions_.py  cdb07f6695e7_add_indexes_for_query_performance.py  dbcead8c70d2_add_account_number_to_cuan_accounts.py  e13f19145873_init_db.py  e3fdb9c1c8b1_refactor_models_and_change_pks_to_uuid.py  e8d1a6f84952_add_database_optimizations_for_transactions.py
app/: __init__.py  main.py
app/core/: config.py
app/mcp/: context.py  server.py  tools.py
app/middleware/: cors.py
app/models/: __init__.py  account.py  auth.py  blog.py  category.py  chat.py  cuan.py  file.py  post.py  transaction.py  user.py
app/routers/: auth.py  blog.py  chat.py  cuan.py  files.py  ngakak.py  splitbill.py  transaction.py
app/schemas/: account.py  auth.py  bill.py  blog.py  category.py  chat.py  common.py  cuan.py  error.py  ngakak.py  post.py  statistics.py  transaction.py  user.py
app/utils/: __init__.py  auth.py  blog_helpers.py  chat_orchestrator.py  common.py  config.py  content_generator.py  crypto.py  cuan_helpers.py  database.py  email.py  embedding.py  file_service.py  mcp_client.py  mimo_client.py  reading_time.py  slug.py  superuser.py  transaction_helpers.py  uuid.py
scripts/: __init__.py  migrate_to_blog_helpers.py  update_embeddings.py
tests/: conftest.py  test_account_number.py  test_auth_rate_limiter.py  test_auth_schemas.py  test_auth_utils.py  test_blog_helpers.py  test_blog_schemas.py  test_blog_search.py  test_chat_orchestrator.py  test_chat_router.py  test_chat_schemas.py  test_crypto.py  test_cuan_balance.py  test_cuan_helpers.py  test_cuan_schemas.py  test_email.py  test_file_service.py  test_files_router.py  test_mcp.py  test_mcp_pool.py  test_mcp_receipt_tool.py  test_mcp_tools.py  test_mimo_client.py  test_ngakak_helpers.py  test_ngakak_rate_limit.py  test_settings_router.py  test_superuser.py
