[project]
name = "yupi"
version = "1.0.0"
description = "yudopr api"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "cffi==2.0.0",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "colorama==0.4.6",
    "cryptography>=47.0.0",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "email-validator==2.3.0",
    "fastapi[standard]==0.135.4",
    "fastapi-cli[standard]==0.0.14",
    "fastapi-mail>=1.6.4",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.15",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "mako==1.3.12",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "openai==1.78.1",
    "pgvector==0.4.1",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydantic>=2.12.5",
    "pydantic-core>=2.33.0",
    "pydantic-settings==2.9.1",
    "pygments==2.20.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "requests==2.33.0",
    "rich==14.0.0",
    "rich-toolkit==0.14.8",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette>=1.3.1",
    "text-unidecode==1.3",
    "tqdm==4.67.1",
    "typer>=0.16.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "mcp[cli]>=1.23.0",
    "pyjwt[crypto]>=2.0.0",
    "anthropic>=0.104.1",
    "uuid-utils>=0.16.0",
    "boto3>=1.43.18",
    "botocore>=1.34.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
